--- a/professional-portfolio/src/pages/about/About.css
+++ b/professional-portfolio/src/pages/about/About.css
@@ -16,17 +16,17 @@
   /* margin: 1rem; */
 }
 
-.welcome {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  max-width: 100vw;
+.welcomeHeader,
+.brandStatement,
+.skillsetHeader h3 {
+  z-index: 1;
 }
 
 .skillsContainer {
   color: var(--accent);
   margin: 8%;
   margin-top: 20%;
+  z-index: 1;
 }
 .aboutContainer h3,
 .skillsContainer h3 {
@@ -38,8 +38,7 @@
   text-align: center;
 }
 
-.aboutContainer p,
-.skillsContainer p {
+.aboutContainer p {
   font-size: 1.5rem;
   margin-top: 3%;
 }
@@ -49,6 +48,9 @@
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
+}
+.singleIconDiv {
+  z-index: 1;
 }
 .icon {
   color: var(--accent);
